labs/lab3/ingress_lab3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - pochikalin.wht.com
    secretName: lab3-secret
  rules:
  - host: pochikalin.wht.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab3-svc
            port:
              number: 3000
